# northengine

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
imgui/: CMakeLists.txt
northengine/: CMakeLists.txt
northengine/SDL/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
northengine/glad_3.3/: CMakeLists.txt
northengine/glad_3.3/include/glad/: glad.h
northengine/glad_3.3/src/: glad.c
northengine/glm/: CMakeLists.txt
northengine/include/northengine/: camera.h  graphics.h  northengine.h  window.h
northengine/include/northengine/graphics/: mesh.h  meshData.h  shader.h  texture.h
northengine/include/northengine/graphics/primitives/: cube.h  polygon.h
northengine/include/northengine/interface/: style.h
northengine/lib/: glad.lib
northengine/src/: camera.cpp  main.cpp  mesh.cpp  meshData.cpp  panel.cpp  shader.cpp  texture.cpp  window.cpp
northengine_lang/: CMakeLists.txt
northengine_lang/include/: function.h
northengine_lang/src/: function.c  main.c
